load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "controller.go",
        "controller_template_event_handler.go",
        "controller_worker.go",
    ],
    importpath = "github.com/atlassian/smith/pkg/templatecontroller",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/apis/smith/v1:go_default_library",
        "//pkg/client/clientset_generated/clientset/typed/smith/v1:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//vendor/github.com/ash2k/stager/wait:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/taskcluster/json-e:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
        "//vendor/k8s.io/client-go/util/workqueue:go_default_library",
    ],
)
