load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/smith/examples/sleeper/main",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/sleeper:go_default_library",
        "//pkg/client:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "main-race",
    gc_linkopts = ["-race"],
    importpath = "github.com/atlassian/smith/examples/sleeper/main",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "main",
    importpath = "github.com/atlassian/smith/examples/sleeper/main",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
