load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atlassian/smith/examples/sleeper/main",
    visibility = ["//visibility:private"],
    deps = [
        "//examples/sleeper:go_default_library",
        "//pkg/client:go_default_library",
        "//vendor/k8s.io/client-go/rest:go_default_library",
    ],
)

go_binary(
    name = "main",
    embed = [":go_default_library"],
    importpath = "github.com/atlassian/smith/examples/sleeper/main",
    pure = "on",
    visibility = ["//visibility:public"],
)

go_binary(
    name = "main_race",
    embed = [":go_default_library"],
    importpath = "github.com/atlassian/smith/examples/sleeper/main",
    race = "on",
    visibility = ["//visibility:public"],
)
