load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "bundle_sync_task.go",
        "controller.go",
        "controller_crd_event_handler.go",
        "controller_worker.go",
        "finalizers.go",
        "resource_sync_task.go",
        "service_instance.go",
        "spec_processor.go",
        "types.go",
    ],
    importpath = "github.com/atlassian/smith/pkg/controller/bundlec",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//pkg/apis/smith/v1:go_default_library",
        "//pkg/client/clientset_generated/clientset/typed/smith/v1:go_default_library",
        "//pkg/plugin:go_default_library",
        "//pkg/resources:go_default_library",
        "//pkg/statuschecker:go_default_library",
        "//pkg/store:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/graph:go_default_library",
        "//pkg/util/logz:go_default_library",
        "//vendor/github.com/ash2k/stager/wait:go_default_library",
        "//vendor/github.com/atlassian/ctrl:go_default_library",
        "//vendor/github.com/atlassian/ctrl/apis/condition/v1:go_default_library",
        "//vendor/github.com/atlassian/ctrl/handlers:go_default_library",
        "//vendor/github.com/atlassian/ctrl/logz:go_default_library",
        "//vendor/github.com/kubernetes-incubator/service-catalog/pkg/apis/servicecatalog/v1beta1:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/golang.org/x/crypto/bcrypt:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apiextensions-apiserver/pkg/apis/apiextensions/v1beta1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/diff:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/errors:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/json:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/watch:go_default_library",
        "//vendor/k8s.io/client-go/dynamic:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "controller_worker_test.go",
        "service_instance_test.go",
        "spec_processor_test.go",
    ],
    embed = [":go_default_library"],
    race = "on",
    deps = [
        "//:go_default_library",
        "//pkg/apis/smith/v1:go_default_library",
        "//pkg/util:go_default_library",
        "//pkg/util/graph:go_default_library",
        "//vendor/github.com/kubernetes-incubator/service-catalog/pkg/apis/servicecatalog/v1beta1:go_default_library",
        "//vendor/github.com/stretchr/testify/assert:go_default_library",
        "//vendor/github.com/stretchr/testify/require:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/api/equality:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/types:go_default_library",
        "//vendor/k8s.io/client-go/tools/cache:go_default_library",
    ],
)
