load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "known_types.go",
        "process_deployment.go",
        "process_secret.go",
        "process_service.go",
        "process_service_binding.go",
        "process_service_instance.go",
        "process_util.go",
    ],
    importpath = "github.com/atlassian/smith/pkg/speccheck/builtin",
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "//pkg/speccheck:go_default_library",
        "//pkg/util:go_default_library",
        "//vendor/github.com/kubernetes-incubator/service-catalog/pkg/apis/servicecatalog/v1beta1:go_default_library",
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/go.uber.org/zap:go_default_library",
        "//vendor/k8s.io/api/apps/v1:go_default_library",
        "//vendor/k8s.io/api/core/v1:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/apis/meta/v1/unstructured:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/runtime/schema:go_default_library",
        "//vendor/k8s.io/apimachinery/pkg/util/runtime:go_default_library",
    ],
)
